--- a/style/style.scss
+++ b/style/style.scss
@@ -163,7 +163,7 @@ section{
     flex-direction: column;
     align-items: left;
     height: 100%;
-    left: 56%;
+    right: -48%;
     top: 15%;
     text-align: left;
     width: 575px;
